Added images of sketches

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -25,6 +25,10 @@
         <h2 class="col-md-12">Sketch 3</h2>
         <div id="plot3"></div>
     </div>
+    <div class = "row">
+        <h2 class="col-md-12">Initial Sketches</h2>
+        <div id="prototypes"></div>
+        <img src="sketches.jpg" alt="Initial Sketches">
 </div>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
