--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -14,21 +14,25 @@
     <div class="row">
         <h2 class="col-md-12">Sketch 1</h2>
         <canvas id="plot1"></canvas>
+        <div>In this first sketch, the hour, minute and second hands are represented as circles orbiting a central dot. Like a traditional clock, the number that each represents is dictated by the angle it makes with the vertical. The hour hand is represented by the largest circle, the minute hand by the medium circle, and the second hand by the smallest circle so that both the size of the circle and the distance it takes each to orbit around the central circle is related to the amount of time a full orbit represents in time.  </div>
     </div>
+
     <div class="row">
         <h2 class="col-md-12">Sketch 2</h2>
-        <div id="plot2">
-        </div>
+        <div id="plot2"></div>
+        <div>In this second sketch, each completed hour is represented by a filled in circle. The current hour is represented by a circle filled in to match the percentage of the hour that has been completed. While it is not visible, the sketch is updated each second. At 12pm the background changes color from orange to blue and the hours reset to mark the change from am to pm.    </div>
 
     </div>
     <div class="row">
         <h2 class="col-md-12">Sketch 3</h2>
         <div id="plot3"></div>
+        <div>In this final and  simplest sketch, each bar represents the completion of a differnt unit of time. The top pink bar shows the percentage of the day that has been completed, the middle orange bar shows the percentage of the hour that has been completed, and the constantly moving yellow bar shows the percentage of the minute that has been completed.    </div>
+
     </div>
     <div class = "row">
         <h2 class="col-md-12">Initial Sketches</h2>
-        <div id="prototypes"></div>
-        <img src="sketches.jpg" alt="Initial Sketches">
+        <div id="prototypes"><img src="sketches.jpg" alt="Initial Sketches"></div>
+        
 </div>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
