--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -10,16 +10,24 @@
 <div class="container">
     <div class="row">
         <h1 class="col-md-12">First Dashboard</h1>
-        <div id="mobile1">
-        </div>
+        <img src="WeatherSketches/WeatherSketch1.png" alt="Sketch1">
+        <!--<div id="mobile1">-->
     </div>
+   
     <br/>
     <div class="row">
         <h1 class="col-md-12">Second Dashboard</h1>
-        <div id="mobile2">
-        </div>
+        <img src="WeatherSketches/WeatherSketch2.png" alt="Sketch2">
+        <!--<div id="mobile2">-->
+       
     </div>
+    <div class = "sketches">
+        <h2 class="col-md-12">Initial Sketches</h2>
+        <div id="prototypes"><img src="WeatherSketches/WeatherSketches1.jpg" alt="Initial Sketches"><img src="WeatherSketches/WeatherSketches2.jpg" alt="Initial Sketches"></div>
+        
 </div>
+</div>
+     </div>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="script.js"></script>
