--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -11,6 +11,7 @@
     <div class="row">
         <h1 class="col-md-12">First Dashboard</h1>
         <img src="WeatherSketches/WeatherSketch1.png" alt="Sketch1">
+        <p>This first sketch shows weather in a clock-like fashion. The different temperatures are represented by warmer and cooler colors, and they are arranged around the circle on a gradient that shows each hour, and minute as a fraction of a ring, starting at the red line, which represents the current time. THe hours are represented by the outer circle and the minutes are represented by the inner circle. </p>
         <!--<div id="mobile1">-->
     </div>
    
@@ -18,6 +19,7 @@
     <div class="row">
         <h1 class="col-md-12">Second Dashboard</h1>
         <img src="WeatherSketches/WeatherSketch2.png" alt="Sketch2">
+        <p>This sketch shows the high and low temperatures of the week. Each vertical pair of circle is a high and a low for a single day, the first row being the current day. The week of highs and lows is centered around a middle axis which represents the avg. weekly temperature.</p>
         <!--<div id="mobile2">-->
        
     </div>
