--- a/Project_2/index_2.html
+++ b/Project_2/index_2.html
@@ -11,10 +11,15 @@
     <div class="row">
         <h1 class="col-md-12">First Dashboard</h1>
         <div id="mobile1">
-            <h2 class="col-md-12">Boston, Ma</h2>
-            <p id="temp" class="col-md-12"></p>
-            <br/>
+            <div class = "header">
+                <p id="temp" class="col-md-12"></p>
+                <h2 class="col-md-12">Boston, Ma</h2>
+            </div>
         <div class="col-md-12" id="plot1"></div>
+        <div class = footer>
+            <p id="summary"></p>
+            <img id ="tempDirection"  >
+        </div>
         </div>
     </div>
    
