--- a/Project_2/index_2.html
+++ b/Project_2/index_2.html
@@ -27,6 +27,23 @@
     <div class="row">
         <h1 class="col-md-12">Second Dashboard</h1>        
         <div id="mobile2">
+            <div id = "header2">
+                <span id = "location"> Boston, Ma</span>
+                <span id ="time"></span>
+                <span id ="headerTemp"></span>
+            </div>
+            <div  id = "wind2">
+                <p class  = "label" id = "windText">Wind</p>
+                <img id ="vane" src = "weatherVaneSolid.png">
+            </div>
+            <div id ="temp2">
+                <p id = "tempText" class  = "label">Temp</p>
+                <img id ="arrow2">
+            </div>
+            <div id ="weather2">
+                <p class  = "label" id ="weatherText">Weather</p>
+                <img id ="weatherIcon" >
+            </div>
         </div>
     </div>
     <div class = "sketches">
