Added Weekly Icons

--- a/Project_2/index_2.html
+++ b/Project_2/index_2.html
@@ -16,6 +16,8 @@
                 <h2 class="col-md-12">Boston, Ma</h2>
             </div>
         <div class="col-md-12" id="plot1"></div>
+        <div id = "weeklyIcons1">
+        </div>
         <div class = footer>
             <p id="summary"></p>
             <img id ="tempDirection"  >
@@ -31,6 +33,8 @@
                 <span id = "location"> Boston, Ma</span>
                 <span id ="time"></span>
                 <span id ="headerTemp"></span>
+            </div>
+            <div id = "weeklyIcons">
             </div>
             <div  id = "wind2">
                 <p class  = "label" id = "windText">Wind</p>
