--- a/Project_2/index_2.html
+++ b/Project_2/index_2.html
@@ -24,7 +24,7 @@
         </div>
         </div>
     </div>
-   
+   <p>In this first sketch, the bar graph represents the temperature range for each day in the week. The dotted line shows the average weekly temperature, and the little orange rect on the first bar shows the current temperature. Below the graph, each day has a weather icon for the general daily weather. Finally, a daily summary is given at the bottom, alongside an arrow that shows weather the temperature is currently increasing or decreasing. </p>
     <br/>
     <div class="row">
         <h1 class="col-md-12">Second Dashboard</h1>        
@@ -50,6 +50,9 @@
             </div>
         </div>
     </div>
+    <p>
+    In this sketch, the top row shows the location, time and current temperature in degrees. Below it, there is a row of icons indicating the daily weather for the next week. The third row shows a weather vane that spins to point in the direction of the current windBearing upon mouse hover. The fourth row shows an arrow that indicates whether the current temperature is increasing or decreasing, and the final row shows the days weather icon. 
+    </p>
     <div class = "sketches">
         <h2 class="col-md-12">Initial Sketches</h2>
         <div id="prototypes"><img src="WeatherSketches/WeatherSketches1.jpg" alt="Initial Sketches"><img src="WeatherSketches/WeatherSketches2.jpg" alt="Initial Sketches"></div>
