--- a/InClass/Week6/index.html
+++ b/InClass/Week6/index.html
@@ -20,5 +20,6 @@
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="script_1.js"></script>
+<script src  = "https://d3js.org/topojson.v2.min.js"></script>
 </body>
 </html>
